--- a/.gitmodules
+++ b/.gitmodules
@@ -10,8 +10,8 @@
 [submodule "PyTorch/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev"]
 	path = PyTorch/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev
 	url = git@github.com:PeterCalifano/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev.git
-[submodule "PyTorch/NAS"]
-	path = PyTorch/NAS
+[submodule "PyTorch/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev"]
+	path = PyTorch/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev
 	url = git@github.com:PeterCalifano/Neural-Architecture-Search-for-Spiking-Neural-Networks_PeterCdev.git
 [submodule "PyTorch/examples/neural-networks-and-deep-learning_PeterCdev"]
 	path = PyTorch/examples/neural-networks-and-deep-learning_PeterCdev
