--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data/*
 testModels
 modelZoo
 checkpoints/*
+slprj
 
 # PyTorch folders
 PyTorch/__pycache__
@@ -28,10 +29,11 @@ event-based_backup
 *.asv
 *.pyc 
 *.mp4
+*.json
+*.slxc
 
 # Tensorboard logs
 tensorboardLog*
 
-*.json
 
-slprj
+
