--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Event-based/v2e_PeterCdev"]
 	path = Event-based/v2e_PeterCdev
 	url = git@github.com:PeterCalifano/v2e_PeterCdev.git
+[submodule "mlflow_PeterCdev"]
+	path = mlflow_PeterCdev
+	url = git@github.com:PeterCalifano/mlflow_PeterCdev.git
