--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 alembic==1.13.2
 aniso8601==9.0.1
 asttokens==2.4.1
 astunparse==1.6.3
+attrs==23.2.0
 blinker==1.8.2
 bottle==0.12.25
 cachetools==5.3.3
@@ -24,6 +27,7 @@ filelock==3.13.1
 Flask==3.0.3
 flatbuffers==24.3.7
 fonttools==4.50.0
+frozenlist==1.4.1
 fsspec==2024.3.1
 gast==0.5.4
 gitdb==4.0.11
@@ -52,16 +56,21 @@ kiwisolver==1.4.5
 kornia==0.7.2
 kornia_rs==0.1.3
 libclang==18.1.1
+lightning==2.3.3
+lightning-utilities==0.11.3.post0
 Mako==1.3.5
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matlabengine==23.2.3
 matplotlib==3.8.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
 mlflow==2.14.1
+mpi4py==3.1.6
 mpmath==1.3.0
+multidict==6.0.5
 namex==0.0.7
 nest-asyncio==1.6.0
 netron==7.7.2
@@ -92,11 +101,12 @@ opt-einsum==3.3.0
 optree==0.10.0
 optuna==3.6.1
 optuna-dashboard==0.15.1
+optuna-fast-fanova==0.0.4
 packaging==24.0
 pandas==2.2.1
 parso==0.8.4
 pexpect==4.9.0
-pillow==9.5.0
+pillow==10.2.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.46
 protobuf==4.25.3
@@ -113,6 +123,7 @@ PyQt6-Qt6==6.7.2
 PyQt6-sip==13.6.0
 PySide2==5.13.2
 python-dateutil==2.9.0.post0
+pytorch-lightning==2.3.3
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
@@ -132,7 +143,6 @@ stack-data==0.6.3
 sympy==1.12
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
 tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 thop==0.1.1.post2209072238
@@ -141,6 +151,7 @@ tk==0.1.0
 torch==2.2.1
 torch-tb-profiler==0.4.3
 torchaudio==2.2.1
+torchmetrics==1.4.0.post0
 torchvision==0.17.1
 tornado==6.4
 tqdm==4.66.4
@@ -152,4 +163,5 @@ urllib3==2.2.1
 wcwidth==0.2.13
 Werkzeug==3.0.1
 wrapt==1.16.0
+yarl==1.9.4
 zipp==3.19.2
