Added lighting to env

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ mlruns/*
 
 optuna_db/CIFAR10_CNN_OptimizationExample.db
 optuna_db/HorizonEnhancerCNN_HyperOptimization_deepNNv8_fullyParametric_RandomNoDropout_WithConicLoss_NEW.db
+optuna_db/HorizonEnhancerCNN_HyperOptimization_deepNNv8_fullyParametric_RandomCloudNoImg_desktop.db
+optuna_db/HorizonEnhancerCNN_HyperOptimization_deepNNv8_fullyParametric_RandomCloud_desktop.db
