--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 absl-py==2.1.0
-aiohttp==3.9.5
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
 alembic==1.13.2
 aniso8601==9.0.1
 asttokens==2.4.1
 astunparse==1.6.3
-attrs==23.2.0
+attrs==24.2.0
 blinker==1.8.2
 bottle==0.12.25
 cachetools==5.3.3
@@ -56,21 +57,19 @@ kiwisolver==1.4.5
 kornia==0.7.2
 kornia_rs==0.1.3
 libclang==18.1.1
-lightning==2.3.3
-lightning-utilities==0.11.3.post0
+lightning==2.4.0
+lightning-utilities==0.11.7
 Mako==1.3.5
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matlabengine==23.2.3
 matplotlib==3.8.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
 mlflow==2.14.1
-mpi4py==3.1.6
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
 namex==0.0.7
 nest-asyncio==1.6.0
 netron==7.7.2
@@ -101,12 +100,11 @@ opt-einsum==3.3.0
 optree==0.10.0
 optuna==3.6.1
 optuna-dashboard==0.15.1
-optuna-fast-fanova==0.0.4
 packaging==24.0
 pandas==2.2.1
 parso==0.8.4
 pexpect==4.9.0
-pillow==10.2.0
+Pillow==9.5.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.46
 protobuf==4.25.3
@@ -114,7 +112,6 @@ psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.2
-pycocotools==2.0.8
 Pygments==2.17.2
 pyparsing==3.1.2
 PyQt5==5.15.10
@@ -124,7 +121,7 @@ PyQt6-Qt6==6.7.2
 PyQt6-sip==13.6.0
 PySide2==5.13.2
 python-dateutil==2.9.0.post0
-pytorch-lightning==2.3.3
+pytorch-lightning==2.4.0
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
@@ -152,7 +149,7 @@ tk==0.1.0
 torch==2.2.1
 torch-tb-profiler==0.4.3
 torchaudio==2.2.1
-torchmetrics==1.4.0.post0
+torchmetrics==1.4.2
 torchvision==0.17.1
 tornado==6.4
 tqdm==4.66.4
@@ -164,5 +161,5 @@ urllib3==2.2.1
 wcwidth==0.2.13
 Werkzeug==3.0.1
 wrapt==1.16.0
-yarl==1.9.4
+yarl==1.11.1
 zipp==3.19.2
