--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ absl-py==2.1.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
+alabaster==0.7.16
 alembic==1.13.2
 aniso8601==9.0.1
 asttokens==2.4.1
 astunparse==1.6.3
 attrs==24.2.0
+babel==2.16.0
 blinker==1.8.2
 bottle==0.12.25
 cachetools==5.3.3
@@ -22,6 +24,7 @@ debugpy==1.8.1
 decorator==5.1.1
 Deprecated==1.2.14
 docker==7.1.0
+docutils==0.20.1
 entrypoints==0.4
 executing==2.0.1
 filelock==3.13.1
@@ -42,6 +45,7 @@ grpcio==1.62.1
 gunicorn==22.0.0
 h5py==3.10.0
 idna==3.6
+imagesize==1.4.1
 importlib_metadata==7.1.0
 imutils==0.5.4
 ipykernel==6.29.4
@@ -135,6 +139,16 @@ shiboken2==5.13.2
 six==1.16.0
 smmap==5.0.1
 snntorch==0.8.1
+snowballstemmer==2.2.0
+Sphinx==7.4.7
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.31
 sqlparse==0.5.0
 stack-data==0.6.3
